# accerciser

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  NOTICE  README  README.md  README.pygi  accerciser.appdata.xml.in  accerciser.desktop.in  accerciser.desktop.in.in  accerciser.doap  accerciser.schemas.in  accerciser.spec.in  acinclude.m4  autogen.sh  configure.ac  configure.in  meson.build  org.a11y.Accerciser.gschema.xml  org.a11y.Accerciser.gschema.xml.in  org.gnome.accerciser.appdata.xml.in  org.gtk.accerciser.metainfo.xml.in  pyreqs.py  release-service.yml
branches/pyatspi/: NEWS  NOTICE  configure.in
branches/pyatspi/debian/: menu
branches/pyatspi/help/: ChangeLog
branches/pyatspi/help/C/: legal.xml
branches/pyatspi/plugins/: Makefile.am  api_view.py  console.py  interface_view.glade  interface_view.py  script_recorder.glade  script_recorder.py
branches/pyatspi/po/: ChangeLog  LINGUAS  dz.po  en_GB.po  sv.po
branches/pyatspi/src/lib/: Makefile.am
branches/pyatspi/src/lib/accerciser/: accessible_treeview.py  plugin.py  plugin_manager.py  script_playback.py
debian/: changelog  control  rules
doc/: Makefile.am  accerciser.1  meson.build
gnome-shell-extension/: meson.build
gnome-shell-extension/accerciser@accerciser.gnome.org/: extension.js  metadata.json
help/: ChangeLog  LINGUAS  Makefile.am  accerciser.omf.in  meson.build
help/C/: accerciser.xml  accerciser.xml.in  api_browser_plugin.page  desktop_tree_view.page  event_monitor_plugin.page  howto_setting_up_accerciser.page  howto_write_a_plugin.page  index.page  interface_viewer_plugin.page  introduction.page  ipython_plugin.page  preferences.page  quick_select_plugin.page  validator_plugin.page
help/az/: az.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/oc/: oc.po
help/oci/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
icons/: Makefile.am
icons/HighContrast/: Makefile.am
icons/hicolor/: Makefile.am  meson.build
kwin-scripts/: kwin-retrieve-mouse-pointer-pos.js  kwin5-retrieve-window-infos.js  kwin6-retrieve-window-infos.js  meson.build
macaroon/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  README  TODO  acinclude.m4  aclocal.m4  configure.in  macaroon.desktop.in  macaroon.desktop.in.in  pyreqs.py
macaroon/macaroon/: Makefile.am  __init__.py
macaroon/macaroon/playback/: Makefile.am  __init__.py  keypress_actions.py  keypress_mimic.py  playback_sequence.py  sequence.py  sequence_step.py  utils.py  wait_actions.py
macaroon/macaroon/record/: Makefile.am  about.py  main.py  script_factory.py
macaroon/po/: Makevars.in  POTFILES.in
pixmaps/: Makefile.am  meson.build
plugindata/: Makefile.am  meson.build
plugindata/validate/: Makefile.am  basic.py  meson.build
plugins/: Makefile.am  api_view.py  console.py  event_monitor.glade  event_monitor.py  event_monitor.ui  interface_view.glade  interface_view.py  interface_view.ui  ipython_view.py  meson.build  quick_select.py  script_recorder.glade  script_recorder.py  script_recorder.ui  validate.glade  validate.py  validate.ui
po/: ChangeLog  Changelog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  (+43 more)
pyatspi/: __init__.py  accessible.py  constants.py  event.py  registry.py  utils.py
src/: Makefile.am  accerciser.glade  accerciser.in  meson.build  wnck-window-infos.py
src/lib/: meson.build
src/lib/accerciser/: Makefile.am  __init__.py  about_dialog.py  accerciser.py  accessible_treeview.py  bookmarks.py  hotkey_manager.py  i18n.py.in  icons.py  main_window.py  menus.py  meson.build  message.py  node.py  plugin.py  plugin_manager.py  prefs_dialog.py  script_playback.py  tools.py  ui_manager.py  view_manager.py  window_manager.py
src/lib/accerciser/plugin/: Makefile.am  __init__.py  base_plugin.py  meson.build  message.py  plugin_manager.py  view.py
tags/ACCERCISER_0_1_0/: NEWS
tags/ACCERCISER_0_1_0/debian/: control  rules
tags/ACCERCISER_0_1_0/icons/: Makefile.am
tags/ACCERCISER_0_1_0/plugins/: Makefile.am  console.py  event_monitor.glade  interface_view.glade  ipython_view.py
tags/ACCERCISER_0_1_0/src/: accerciser.in
tags/ACCERCISER_0_1_0/src/lib/accerciser/: .cvsignore  Makefile.am  accessible_treeview.py  node.py  plugin.py  plugin_manager.py  tools.py
tags/ACCERCISER_0_1_1/: AUTHORS  ChangeLog  Makefile.am  README  accerciser.spec.in  configure.in  pyreqs.py
tags/ACCERCISER_0_1_1/debian/: changelog  copyright  rules
tags/ACCERCISER_0_1_1/icons/: Makefile.am
tags/ACCERCISER_0_1_1/pixmaps/: Makefile.am
tags/ACCERCISER_0_1_1/plugins/: api_view.py  console.py  interface_view.py  ipython_view.py  script_recorder.py
tags/ACCERCISER_0_1_1/po/: LINGUAS  POTFILES.in  ar.po  gl.po  sv.po
tags/ACCERCISER_0_1_1/src/: accerciser.in
tags/ACCERCISER_0_1_1/src/lib/accerciser/: Makefile.am  accerciser.py  node.py  plugin.py  script_playback.py  tools.py
trunk/: ChangeLog  NOTICE  accerciser.desktop.in.in  accerciser.schemas.in
trunk/debian/: changelog
trunk/help/: ChangeLog  Makefile.am
trunk/help/es/: es.po
trunk/plugins/: api_view.py  ipython_view.py
trunk/po/: POTFILES.skip  es.po  nb.po  pa.po
trunk/src/: accerciser.glade
trunk/src/lib/accerciser/: __init__.py  tools.py
