AC_INIT(Accerciser, 0.2.0, eitan@ascender.com, accerciser)
AC_CONFIG_SRCDIR(src/accerciser.in)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

GNOME_DOC_INIT

dnl == check for python ==
AM_PATH_PYTHON(2.4)

dnl == check for required modules ==
AM_CHECK_PYSCRIPT($srcdir/pyreqs.py, , 
  [AC_MSG_ERROR(Could not find required Python module)])

ALL_LINGUAS=""
GETTEXT_PACKAGE=accerciser
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])
AM_GLIB_GNU_GETTEXT

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

dnl == generate makefiles ==
AC_OUTPUT([
Makefile
accerciser.spec
accerciser.desktop
help/Makefile
icons/Makefile
plugins/Makefile
src/accerciser
src/Makefile
src/lib/Makefile
src/lib/accerciser/i18n.py
src/lib/accerciser/Makefile
])
