include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = accerciser
DOC_ENTITIES = legal.xml 
DOC_INCLUDES =
DOC_FIGURES = \
	figures/accerciser.png \
	figures/api_browser.png \
	figures/event_monitor.png \
	figures/interface_viewer.png \
	figures/script_recorder.png
DISTCLEANFILES = accerciser-C.omf
DOC_LINGUAS = ca cs de el en_GB es fr it oc pt_BR sv
