@YELP_HELP_RULES@

HELP_ID= accerciser

HELP_MEDIA = \
	figures/accerciser-logo.png \
	figures/interface_viewer_plugin.png \
	figures/accerciser-view.png \
	figures/IPython_plugin.png \
	figures/accessible_tree.png \
	figures/api_browser.png \
	figures/tree_view_accerciser.png \
	figures/event_monitor_plugin.png \
	figures/validator_app_tree.png \
	figures/validator_report.png 

HELP_FILES = \
	api_browser_plugin.page \
	desktop_tree_view.page \
	event_monitor_plugin.page \
	howto_setting_up_accerciser.page \
	howto_write_a_plugin.page \
	index.page \
	interface_viewer_plugin.page \
	introduction.page \
	ipython_plugin.page \
	preferences.page \
	quick_select_plugin.page \
	validator_plugin.page

HELP_LINGUAS  = ca cs de el en_GB es fr gl it ja oc pt_BR sl sv uk zh_CN
