AC_INIT(Macaroon, 0.0.1, eitan@ascender.com, macaroon)
AC_CONFIG_AUX_DIR(./)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE([enable])

dnl == check for python ==
AM_PATH_PYTHON(2.4)

dnl == i18n ==
GETTEXT_PACKAGE=macaroon
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])
AM_GLIB_GNU_GETTEXT

dnl == intltool check ==
IT_PROG_INTLTOOL([0.35.0])

dnl == generate makefiles ==
AC_OUTPUT([
Makefile
macaroon.desktop.in
po/Makefile.in
bin/Makefile
bin/macaroon
macaroon/Makefile
macaroon/record/Makefile
macaroon/playback/Makefile
])
