pixmaps = [
  'acceleratorlabel.png',
  'alert.png',
  'animation.png',
  'arrow.png',
  'calendar.png',
  'canvas.png',
  'care.png',
  'character.png',
  'chart.png',
  'checkbox.png',
  'checkmenuitem.png',
  'clock.png',
  'colorchooser.png',
  'columnheader.png',
  'column.png',
  'combobox.png',
  'cursor.png',
  'dateeditor.png',
  'desktopicon.png',
  'dialog.png',
  'dial.png',
  'directorypane.png',
  'drawingarea.png',
  'embedded.png',
  'endnote.png',
  'entry.png',
  'filechooser.png',
  'filler.png',
  'focustraversable.png',
  'fontchooser.png',
  'form.png',
  'frame.png',
  'glasspane.png',
  'grip.png',
  'heading.png',
  'helpballoon.png',
  'htmlcontainer.png',
  'icon.png',
  'imagemap.png',
  'image.png',
  'inputmethodwindow.png',
  'invalid.png',
  'label.png',
  'link.png',
  'listitem.png',
  'list.png',
  'menubar.png',
  'menuitem.png',
  'menu.png',
  'pagetablist.png',
  'pagetab.png',
  'passwordtext.png',
  'popupmenu.png',
  'progressbar.png',
  'pushbutton.png',
  'radiobutton.png',
  'radiomenuitem.png',
  'row.png',
  'ruler.png',
  'scrollbar.png',
  'scrollpane.png',
  'section.png',
  'separator.png',
  'shape.png',
  'slider.png',
  'sound.png',
  'spinbutton.png',
  'splitpane.png',
  'statusbar.png',
  'tablecell.png',
  'table.png',
  'tearoffmenuitem.png',
  'terminal.png',
  'text.png',
  'togglebutton.png',
  'toolbar.png',
  'tooltip.png',
  'tree.png',
  'treetable.png',
  'window.png',
]

install_data(pixmaps,
  install_dir: get_option('datadir') / meson.project_name() / 'pixmaps' / 'hicolor' / '22x22',
)
