pluginsdir = $(datadir)/$(PACKAGE)/plugins
plugins_DATA = api_view.py \
	console.py \
	event_monitor.glade \
	event_monitor.py \
	interface_view.glade \
	interface_view.py \
	ipython_view.py \
	quick_select.py \
	script_recorder.glade \
	script_recorder.py \
	validate.glade \
	validate.py
EXTRA_DIST = $(plugins_DATA)
