pluginsdir = $(datadir)/$(PACKAGE)/plugins
plugins_DATA = api_view.py \
	console.py \
	event_monitor.ui \
	event_monitor.py \
	interface_view.ui \
	interface_view.py \
	quick_select.py \
	validate.ui \
	validate.py
plugins_SCRIPTS = \
	ipython_view.py
EXTRA_DIST = $(plugins_DATA) \
	$(plugins_SCRIPTS)
