plugins_files = [
  'api_view.py',
  'console.py',
  'event_monitor.py',
  'event_monitor.ui',
  'ipython_view.py',
  'interface_view.py',
  'interface_view.ui',
  'quick_select.py',
  'validate.ui',
  'validate.py',
]

install_data(plugins_files,
  install_dir: get_option('datadir') / meson.project_name() / 'plugins',
)
