hicolor_dir = get_option('datadir') / 'icons' / 'hicolor'

# Note that we don't install accerciser-small.png

install_data('accerciser-16.png',
  install_dir: hicolor_dir / '16x16' / 'apps',
  rename: 'accerciser.png',
)
install_data('accerciser-22.png',
  install_dir: hicolor_dir / '22x22' / 'apps',
  rename: 'accerciser.png',
)
install_data('accerciser-32.png',
  install_dir: hicolor_dir / '32x32' / 'apps',
  rename: 'accerciser.png',
)
install_data('accerciser.png',
  install_dir: hicolor_dir / '48x48' / 'apps',
  rename: 'accerciser.png',
)

install_data('accerciser.svg',
  install_dir: hicolor_dir / 'scalable' / 'apps',
)
install_data('accerciser-symbolic.svg',
  install_dir: hicolor_dir / 'symbolic' / 'apps',
)
