SUBDIRS = plugin
accerciser_PYTHON = about_dialog.py \
	accerciser.py \
	accessible_treeview.py \
	bookmarks.py \
	i18n.py \
	icons.py \
	main_window.py \
	node.py \
	prefs_dialog.py \
	tools.py \
	ui_manager.py \
	hotkey_manager.py \
	__init__.py
accerciserdir = $(pkgpythondir)/
DISTCLEANFILES = i18n.py
