pixmapsdir = $(pkgdatadir)/pixmaps/hicolor/22x22

pixmaps_DATA = \
	acceleratorlabel.png \
	alert.png \
	animation.png \
	calendar.png \
	canvas.png \
	care.png \
	character.png \
	chart.png \
	checkbox.png \
	clock.png \
	colorchooser.png \
	column.png \
	combobox.png \
	cursor.png \
	desktopframe.png \
	desktopicon.png \
	dial.png \
	directorypane.png \
	drawingarea.png \
	embedded.png \
	endnote.png \
	entry.png \
	filechooser.png \
	filler.png \
	fontchooser.png \
	form.png \
	grip.png \
	heading.png \
	helpballoon.png \
	imagemap.png \
	image.png \
	inputmethodwindow.png \
	invalid.png \
	label.png \
	link.png \
	listitem.png \
	list.png \
	menuitem.png \
	outlineitem.png \
	passwordtext.png \
	progressbar.png \
	pushbutton.png \
	row.png \
	ruler.png \
	scrollbar.png \
	scrollpane.png \
	seperator.png \
	shape.png \
	slider.png \
	sound.png \
	spinbutton.png \
	splitpane.png \
	statusbar.png \
	tablecell.png \
	table.png \
	toolbar.png \
	tooltip.png \
	tree.png \
	treetable.png

EXTRA_DIST = $(pixmaps_DATA)